Corrected the overflow when the transactions are alot.

--- a/transactions/styles2.css
+++ b/transactions/styles2.css
@@ -13,7 +13,8 @@ html {
 }
 
 body {
-    height: 100vh;
+    height: auto;
+    overflow: scroll;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,7 +41,7 @@ h1 {
 
 #container {
     width: 392px;
-    height: 150%;
+    min-height: 100vh;
     /* border: 1px solid black; */
     padding: 15px;
     background-color: white;
